--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/icon.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="News for developers"/><link rel="manifest" href="/manifest.json"/><title>RocketNews</title><script defer="defer" src="/static/js/main.0affd935.js"></script><link href="/static/css/main.c01ad75e.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="./icon.png" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="News for developers" />
+    <link rel="manifest" href="./manifest.json" />
+    <title>RocketNews</title>
+    <script defer="defer" src="./static/js/main.0affd935.js"></script>
+    <link href="./static/css/main.c01ad75e.css" rel="stylesheet">
+</head>
+
+<body><noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+</body>
+
+</html>
